--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 
     <style>body{
         margin:0;
-        font-family:'Segoe UI', sans-serif;
+        padding:0;
+        font-family:'Inter', sans-serif;
         background-color: #121212;
         color:#e0e0e0;
+        line-height: 1.6;
     }
-
+    section{
+        padding:60px 20px;
+    }
     nav{
         background: #1f1f1f;
         display:flex;
@@ -119,6 +123,11 @@
         font-weight:7px;
         color:black;
     }
+    @media(min-width:768px){
+    section{
+        padding:80px 100px;
+    }
+    }
     @keyframes pulse-glow{
         0%,100%{
             box-shadow: 0 0 15px rgba(210, 209, 204, 0.6);;
@@ -219,7 +228,7 @@
     </section>
     <!--contact-->
     <section id="contact">
-        <h2 style="color:black;">Contact Me</h2>
+        <h2 style="color:black;">Let's connect</h2>
         <form >
             <input type="text" placeholder="Your Name" required class="name"><br>
             <input type="email" placeholder="Your Mail" required class="email"><br>
@@ -227,5 +236,7 @@
             <button type="submit" class="send">Send</button>
         </form>
     </section>
+    <footer style="text-align:center; padding:1em; background:#1f1f1f;">
+        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
 </body>
 </html>
