--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
     <!--contact-->
     <section id="contact">
-        <h2 style="color:rgb(0, 0, 0);">Let's connect</h2>
+        <h2 >Let's connect</h2>
         <form >
             <input type="text" placeholder="Your Name" required class="name"><br>
             <input type="email" placeholder="Your Mail" required class="email"><br>
