updated code and fixed bugs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="about">
         <img src="myprofile.jpg" alt="My Profile" class="profile-img">
         <div class="about-text">
-            <h2>Hi, I'm charitha</h2>
+            <h2>Hi, I'm Charitha</h2>
             <p>I'm a computer science undergraduate passionate about building meaningful software solutions.
                 <br>I'm currently pursuing my B.Tech in computer Science and Engineering at JNTUA college of Engineering kalikiri, where I'm
                 developing a strong foundation in databases,and web technologies. I enjoy exploring both front-end and
@@ -72,7 +72,7 @@
             <button type="submit" class="send">Send</button>
         </form>
     </section>
-    <footer style="text-align:center; padding:1em; background:#1f1f1f;">
+    <footer >
         <p>&copy; 2025 My Portfolio. All rights reserved.</p>
 </body>
 </html>
