--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <style>
     body{
         margin:0;
-        font-family:'Segoe UI', sans-serif;
-        background-color: #121212;
-        color:#e0e0e0;
-    }
-        body{
-        margin:0;
         padding:0;
         font-family:'Inter', sans-serif;
-        background-color: #121212;
         color:#e0e0e0;
         line-height: 1.6;
+        background-color: #0f172a; /* dark navy */
+        background-image:
+        linear-gradient(90deg, rgba(255,255,255,.05) 1px, transparent 1px),
+        linear-gradient(rgba(255,255,255,.05) 1px, transparent 1px);
+        background-size: 40px 40px; /* size of each grid square */
     }
+
     section{
         padding:60px 20px;
     }
@@ -251,6 +250,5 @@
     </section>
     <footer style="text-align:center; padding:1em; background:#1f1f1f;">
         <p>&copy; 2025 My Portfolio. All rights reserved.</p>
-
 </body>
 </html>
