Updated my profile image

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </nav>
     <!--image&about-->
     <section id="about">
-        <img src="myprofile.jpg" alt="My Profile" class="profile-img">
+        <img src="profile.jpg" alt="My Profile" class="profile-img">
         <div class="about-text">
             <h2>Hi, I'm charitha</h2>
             <p>I'm a computer science undergraduate passionate about building meaningful software solutions.
